--- a/app/src/main/res/layout/order_row_relative.xml
+++ b/app/src/main/res/layout/order_row_relative.xml
@@ -8,18 +8,34 @@
     >
 
     <TextView
-        android:id="@+id/orderNo"
+        android:id="@+id/orderId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
+
 
         android:layout_marginStart="26dp"
+        android:layout_marginTop="4dp"
+
+        android:fontFamily="@font/sfprotext_bold"
+        android:gravity="center"
+        android:text="@string/order_id"
+        android:singleLine="false"
+        android:textColor="#BDBDBD"
+        android:textSize="22sp" />
+
+    <TextView
+        android:id="@+id/idNumber"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="22dp"
+        android:layout_below="@id/orderId"
 
 
-        android:fontFamily="@font/sfprotext_regular"
-        android:gravity="end"
-        android:text="#1"
+        android:fontFamily="@font/sfprotext_bold"
+        android:gravity="center"
+        android:text="1"
         android:textColor="#333333"
         android:textSize="22sp" />
 
@@ -34,7 +50,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="48dp"
         android:layout_toStartOf="@+id/cancelButton"
-        android:layout_toEndOf="@+id/orderNo"
+        android:layout_toEndOf="@+id/orderId"
 
 
         android:ellipsize="end"
@@ -57,7 +73,7 @@
 
         android:layout_marginBottom="4dp"
         android:layout_toStartOf="@+id/cancelButton"
-        android:layout_toEndOf="@+id/orderNo"
+        android:layout_toEndOf="@+id/orderId"
         android:fontFamily="@font/sfprotext_regular"
         android:text="Extra"
         android:textColor="#4F4F4F"
