move patt files from v1

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         android:background="@drawable/ic_vcanteen_logo"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="50dp"/>
+        android:layout_marginBottom="30dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -117,10 +117,29 @@
             android:visibility="gone"/>
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="50dp"
+        >
+    <Button
+        android:id="@+id/signup_button"
+        android:layout_width="230dp"
+        android:layout_height="60dp"
+        android:text="SIGN UP"
+        android:fontFamily="@font/sfprotext_semibold"
+        android:textSize="28dp"
+        android:textColor="@color/pinkPrimary"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/outline_pink_round_btn"
+        android:layout_marginRight="33dp"
+        android:translationZ="2dp"/>
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="250dp"
+        android:layout_width="230dp"
+        android:layout_toRightOf="@id/signup_button"
         android:layout_height="60dp"
         android:text="LOGIN"
         android:fontFamily="@font/sfprotext_semibold"
@@ -128,9 +147,9 @@
         android:textColor="#ffffff"
         android:layout_marginTop="20dp"
         android:background="@drawable/pink_round_btn"
-        android:layout_marginLeft="50dp"
-        android:layout_marginBottom="30dp"
         android:translationZ="2dp"/>
+
+    </RelativeLayout>
 
     <View
         android:id="@+id/divider"
