--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -205,14 +205,26 @@
                 android:layout_marginTop="32dp"
                 android:background="@drawable/img_loading"
                  />
+            <Button
+                android:id="@+id/changePictureButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/pinkPrimary"
+                android:layout_below="@id/vendorProfilePicture"
+                android:text="Change picture"
+                android:layout_marginLeft="20dp"
+                android:fontFamily="@font/sfprotext_semibold"
+                android:textSize="16sp"
+                android:background="@android:color/transparent"
+                android:layout_centerHorizontal="true"/>
 
             <EditText
                 android:id="@+id/vendorNameInput"
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/vendorProfilePicture"
+                android:layout_below="@+id/changePictureButton"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="40dp"
 
                 android:background="@android:color/transparent"
                 android:focusable="false"
@@ -251,14 +263,15 @@
                 android:textSize="18sp" />
 
 
+
             <!--LABELS-->
 
             <TextView
                 android:id="@+id/typeInputLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/vendorProfilePicture"
-                android:layout_marginTop="62dp"
+                android:layout_below="@+id/changePictureButton"
+                android:layout_marginTop="42dp"
                 android:layout_marginEnd="27dp"
                 android:layout_toStartOf="@+id/vendorNameInput"
                 android:fontFamily="@font/sfprotext_semibold"
@@ -279,6 +292,59 @@
                 android:textColor="#828282"
                 android:textSize="16sp" />
 
+            <TextView
+                android:id="@+id/reviewInputLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/nameInputLabel"
+                android:layout_marginTop="38dp"
+                android:layout_marginEnd="33dp"
+                android:text="Reviews"
+                android:textColor="#828282"
+                android:textSize="16sp"
+                android:layout_alignLeft="@id/nameInputLabel"
+                />
+
+            <TextView
+                android:id="@+id/reviewValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Loading... ✭"
+                android:fontFamily="@font/sfprotext_semibold"
+                android:layout_toRightOf="@id/reviewInputLabel"
+                android:textSize="16sp"
+                android:textColor="@color/pinkPrimary"
+                android:layout_below="@+id/vendorEmailInput"
+                android:layout_marginTop="24dp"
+                />
+
+            <Button
+                android:id="@+id/viewReviewsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/pinkPrimary"
+                android:layout_toRightOf="@id/reviewValue"
+                android:text="see all reviews"
+                android:layout_marginLeft="20dp"
+                android:fontFamily="@font/sfprotext_semibold"
+                android:textSize="16sp"
+                android:layout_alignBaseline="@id/reviewValue"
+                android:background="@android:color/transparent"/>
+
+            <Button
+                android:id="@+id/changePinButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="48dp"
+                android:layout_marginBottom="30dp"
+                android:background="@android:color/transparent"
+                android:fontFamily="@font/sfprotext_bold"
+                android:paddingHorizontal="8dp"
+                android:text="change pin"
+                android:textColor="@color/pinkPrimary"
+                android:layout_toStartOf="@id/changePasswordButton"
+                android:textSize="16sp"/>
 
             <Button
                 android:id="@+id/changePasswordButton"
@@ -309,6 +375,24 @@
                 android:text="sign out"
                 android:textColor="@color/pinkPrimary"
                 android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/editProfileButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableRight="@drawable/ic_edit"
+                android:background="@android:color/transparent"
+                android:fontFamily="@font/sfprotext_semibold"
+                android:paddingHorizontal="8dp"
+                android:layout_marginBottom="-65dp"
+                android:text="edit profile  "
+                android:textColor="@color/pinkPrimary"
+                android:textSize="14sp"
+                android:layout_alignRight="@id/signOutButton"
+                android:layout_above="@id/typeInputLabel"
+                />
+
+
 
 
         </RelativeLayout>
@@ -348,7 +432,7 @@
 
             <TextView
                 android:id="@+id/paymentMethod"
-                android:layout_width="400dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="12dp"
@@ -415,13 +499,14 @@
                     android:id="@+id/checkCUNex"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/cuNex"
+                    android:text="LINKED"
                     android:drawableStart="@drawable/ic_check"
                     android:drawablePadding="8dp"
                     android:fontFamily="@font/sfprotext_regular"
-                    android:text="LINKED"
                     android:textSize="12sp"
-                    android:visibility="invisible" />
+                    android:layout_alignBaseline="@+id/cuNex"
+                    android:visibility="invisible"
+                    />
 
                 <TextView
                     android:id="@+id/cuNex"
@@ -576,7 +661,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_toEndOf="@+id/checkTrueMoney"
                     android:fontFamily="@font/sfprotext_regular"
-                    android:text="TrueMoney Wallet"
+                    android:text="K PLUS"
                     android:textColor="@color/colortext"
                     android:textSize="18sp" />
 
@@ -593,6 +678,55 @@
                     android:visibility="invisible"/>
 
             </RelativeLayout>
+
+            <TextView
+                android:id="@+id/bugReportTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#333333"
+                android:text="BUG REPORT"
+                android:textSize="24sp"
+                android:fontFamily="@font/sfprotext_bold"
+                android:layout_below="@id/trueMoneyRow"
+                android:layout_alignLeft="@id/trueMoneyRow"
+                android:layout_marginTop="50dp"/>
+            <TextView
+                android:id="@+id/wordCountReportBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:fontFamily="@font/sfprotext_mediumitalic"
+                android:textColor="#828282"
+                android:text="0/300"
+                android:layout_alignRight="@id/bugReportBox"
+                android:layout_alignBaseline="@id/bugReportTitle"/>
+
+            <EditText
+                android:id="@+id/bugReportBox"
+                android:layout_width="400dp"
+                android:layout_height="200dp"
+                android:layout_below="@id/bugReportTitle"
+                android:background="@drawable/outline_rect"
+                android:layout_alignLeft="@id/bugReportTitle"
+                android:layout_marginTop="10dp"
+                android:hint="Report any bug here, every little things will improve your experiences with the app :)"
+                android:padding="10dp"
+                />
+
+            <Button
+                android:id="@+id/reportButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/pinkPrimary"
+                android:text="REPORT"
+                android:textSize="16sp"
+                android:fontFamily="@font/sfprotext_semibold"
+                android:background="@android:color/transparent"
+                android:layout_alignRight="@id/bugReportBox"
+                android:layout_below="@id/bugReportBox"
+                android:layout_marginTop="10dp"/>
+
+
 
 
         </RelativeLayout>
