--- a/app/src/main/res/layout/review_list_item.xml
+++ b/app/src/main/res/layout/review_list_item.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:padding="16dp"
     android:background="@drawable/bg_review_item"
+    android:layout_marginBottom="12dp"
     >
 
     <TextView
