Fix Sales Record 4 Digit Pin

--- a/app/src/main/res/layout/activity_sales_record.xml
+++ b/app/src/main/res/layout/activity_sales_record.xml
@@ -129,43 +129,44 @@
         android:background="?android:attr/listDivider" />
 
     <LinearLayout
+        android:id="@+id/LinearLayout1"
         android:layout_width="900dp"
         android:layout_height="100dp"
-        android:layout_margin="20dp"
         android:layout_gravity="center"
-        >
+        android:layout_margin="20dp">
+
         <RelativeLayout
             android:layout_width="230dp"
             android:layout_height="100dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
             android:background="@drawable/button_gradient_rounded">
+
             <TextView
                 android:id="@+id/today_net"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="TODAY NET INCOME"
+                android:layout_alignParentRight="true"
                 android:layout_marginTop="12dp"
                 android:layout_marginRight="30dp"
-                android:layout_alignParentRight="true"
-                android:gravity="left"
                 android:fontFamily="@font/sfprotext_semibold"
-                android:textSize="18sp"
+                android:gravity="left"
+                android:text="TODAY NET INCOME"
                 android:textColor="#ffffff"
-                />
+                android:textSize="18sp" />
+
             <TextView
                 android:id="@+id/total_sales"
                 android:layout_width="wrap_content"
-                android:layout_below="@id/today_net"
                 android:layout_height="70dp"
+                android:layout_below="@id/today_net"
+                android:layout_alignParentRight="true"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="30dp"
-                android:layout_alignParentRight="true"
                 android:fontFamily="@font/sfprotext_semibold"
-                android:textSize="30sp"
                 android:gravity="left"
                 android:textColor="#ffffff"
-                />
+                android:textSize="30sp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -174,102 +175,131 @@
             android:layout_gravity="center_vertical"
             android:background="@drawable/outline_rect">
 
-        <TextView
-            android:id="@+id/best_seller"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="BEST SELLER"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="12dp"
-            android:layout_alignParentLeft="true"
-            android:fontFamily="@font/sfprotext_semibold"
-            android:textSize="16sp"
-            android:textColor="@color/pinkPrimary"/>
+            <TextView
+                android:id="@+id/best_seller"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/sfprotext_semibold"
+                android:text="BEST SELLER"
+                android:textColor="@color/pinkPrimary"
+                android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/dishes_sold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DISHES SOLD"
-            android:layout_alignParentRight="true"
-            android:layout_marginEnd="30dp"
-            android:layout_marginTop="12dp"
-            android:fontFamily="@font/sfprotext_semibold"
-            android:textSize="16sp"
-            android:textColor="@color/pinkPrimary"
-            />
+            <TextView
+                android:id="@+id/dishes_sold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="30dp"
+                android:fontFamily="@font/sfprotext_semibold"
+                android:text="DISHES SOLD"
+                android:textColor="@color/pinkPrimary"
+                android:textSize="16sp" />
 
-         <TextView
-             android:id="@+id/best_seller_dish"
-             android:layout_width="550dp"
-             android:layout_marginTop="17dp"
-             android:layout_marginLeft="25dp"
-             android:layout_height="wrap_content"
-             android:layout_below="@id/best_seller"
-             android:fontFamily="@font/sfprotext_semibold"
-             android:textSize="20sp"
-             android:textColor="@color/colorPrimaryDark"
-             />
+            <TextView
+                android:id="@+id/best_seller_dish"
+                android:layout_width="550dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/best_seller"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="17dp"
+                android:fontFamily="@font/sfprotext_semibold"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/number_sold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/dishes_sold"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="17dp"
                 android:layout_marginRight="30dp"
-                android:layout_below="@id/dishes_sold"
                 android:fontFamily="@font/sfprotext_semibold"
-                android:textSize="20sp"
-                android:textColor="@color/colorPrimaryDark"/>
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp" />
 
-        </RelativeLayout>>
+        </RelativeLayout>
+        >
 
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/LinearLayout2"
         android:layout_width="900dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="3dp"
-        android:layout_gravity="center"
         android:weightSum="8">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="ORDER NO."
             android:layout_marginLeft="30dp"
             android:layout_weight="1"
             android:fontFamily="@font/sfprotext_semibold"
-            android:textSize="12dp"
+            android:gravity="center"
+            android:text="ORDER NO."
             android:textColor="@color/lightgrey"
-           android:gravity="center"/>
+            android:textSize="12dp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="MENU &amp; ADDS-ON"
-            android:gravity="center_horizontal"
             android:layout_weight="6"
             android:fontFamily="@font/sfprotext_semibold"
-            android:textSize="12dp"
-            android:textColor="@color/lightgrey"/>
+            android:gravity="center_horizontal"
+            android:text="MENU &amp; ADDS-ON"
+            android:textColor="@color/lightgrey"
+            android:textSize="12dp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="PRICE"
+            android:layout_marginRight="30dp"
             android:layout_weight="1"
             android:fontFamily="@font/sfprotext_semibold"
-            android:textSize="12dp"
+            android:gravity="center_horizontal"
+            android:text="PRICE"
             android:textColor="@color/lightgrey"
-            android:layout_marginRight="30dp"
-            android:gravity="center_horizontal"/>
+            android:textSize="12dp" />
 
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/itemNotEnterPin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="visible"
+        app:srcCompat="@drawable/remove" />
+
+    <TextView
+        android:id="@+id/itemNotEnterPin2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/sfprotext_semibold"
+        android:text="You need to enter 4-digit pin to view sales record."
+        android:textSize="20dp" />
+
+    <Button
+        android:id="@+id/itemNotEnterPin3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/sfprotext_bold"
+        android:text="CLICK TO ENTER 4-DIGIT PIN"
+        android:textColor="@color/pinkPrimary"
+        android:textSize="20dp" />
 
     <ListView
         android:id="@+id/salesRecordList"
@@ -279,6 +309,9 @@
         android:background="#FFFFFF"
         android:dividerHeight="1dp"
         android:footerDividersEnabled="true"
-        android:scrollbars="horizontal" />
+        android:scrollbars="horizontal" >
+
+
+    </ListView>
 
 </LinearLayout>
