--- a/app/src/main/res/layout/popup_payment_link.xml
+++ b/app/src/main/res/layout/popup_payment_link.xml
@@ -7,8 +7,6 @@
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:foregroundGravity="center_vertical|center_horizontal"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,7 +37,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/link_title"
+                android:id="@+id/serviceProviderText"
                 android:layout_width="206dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/popup_payment_link_title"
@@ -47,6 +45,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/sfprotext_semibold"
                 android:text="SCB EASY"
                 android:textAlignment="textStart"
                 android:textColor="#000000"
@@ -57,7 +56,7 @@
                 android:id="@+id/popup_payment_unlink_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/link_title"
+                android:layout_below="@+id/serviceProviderText"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
@@ -104,7 +103,8 @@
                 android:background="@drawable/button_gradient_rounded"
                 android:fontFamily="@font/sfprotext_bold"
                 android:text="LINK"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
 
             <ImageView
                 android:id="@+id/close_x"
