Minor Fix on 4 Digit Pin

--- a/app/src/main/res/layout/activity_sales_record.xml
+++ b/app/src/main/res/layout/activity_sales_record.xml
@@ -291,7 +291,7 @@
         android:textSize="20dp" />
 
     <Button
-        android:id="@+id/itemNotEnterPin3"
+        android:id="@+id/reappearPinDialogButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
