--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,191 +6,188 @@
     android:layout_height="match_parent"
     >
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="30dp"
-    android:orientation="vertical"
-    android:layout_weight="0.5">
+    <LinearLayout
+        android:id="@+id/login"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.5"
+        android:orientation="vertical"
+        android:padding="30dp">
 
-    <ImageView
-        android:id="@+id/vcanteenlogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ic_vcanteen_logo"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="30dp"/>
+        <ImageView
+            android:id="@+id/vcanteenlogo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/ic_vcanteen_logo" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Vendor Login"
-        android:textColor="@color/colorPrimaryDark"
-        android:fontFamily="@font/sfprotext_semibold"
-        android:textSize="28dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginLeft="40dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginBottom="32dp"
+            android:fontFamily="@font/sfprotext_semibold"
+            android:text="Vendor Login"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="28dp" />
 
         <LinearLayout
             android:id="@+id/emailbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_marginLeft="50dp"
             android:layout_marginBottom="12dp"
-            android:layout_marginLeft="50dp">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/sfprotext_semibold"
                 android:text="Email"
                 android:textColor="@color/colortext"
-                android:fontFamily="@font/sfprotext_semibold"
-                android:textSize="24dp"
-                />
+                android:textSize="24dp" />
 
             <EditText
                 android:id="@+id/email_field"
                 android:layout_width="490dp"
                 android:layout_height="wrap_content"
-                android:hint="Enter your email..."
                 android:layout_marginTop="30dp"
-                android:clickable="true"
-                android:focusableInTouchMode="true" />
-        </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/passwordbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="50dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Password"
-            android:textColor="@color/colortext"
-            android:fontFamily="@font/sfprotext_semibold"
-            android:textSize="24dp"
-            />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="10">
-
-            <EditText
-                android:id="@+id/password_field"
-                android:layout_width="490dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:layout_weight="7"
-                android:inputType="textPassword"
                 android:clickable="true"
                 android:focusableInTouchMode="true"
-                />
-
-            <Button
-                android:id="@+id/show_pw_btn"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="-85dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="0dp"
-                android:text="SHOW"
-                android:textColor="#FF9494"
-                />
-
+                android:hint="Enter your email..." />
         </LinearLayout>
 
-
-        <TextView
-            android:id="@+id/errorLogin"
+        <LinearLayout
+            android:id="@+id/passwordbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email or Password is Incorrect"
-            android:textColor="@color/redPrimary"
-            android:visibility="gone"/>
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="12dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/sfprotext_semibold"
+                android:text="Password"
+                android:textColor="@color/colortext"
+                android:textSize="24dp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <EditText
+                    android:id="@+id/password_field"
+                    android:layout_width="490dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_weight="7"
+                    android:clickable="true"
+                    android:focusableInTouchMode="true"
+                    android:inputType="textPassword" />
+
+                <Button
+                    android:id="@+id/show_pw_btn"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="-85dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="0dp"
+                    android:text="SHOW"
+                    android:textColor="#FF9494" />
+
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/errorLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Email or Password is Incorrect"
+                android:textColor="@color/redPrimary"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginBottom="30dp">
+
+            <Button
+                android:id="@+id/signup_button"
+                android:layout_width="230dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="33dp"
+                android:background="@drawable/outline_pink_round_btn"
+                android:fontFamily="@font/sfprotext_semibold"
+                android:text="SIGN UP"
+                android:textColor="@color/pinkPrimary"
+                android:textSize="28dp"
+                android:translationZ="2dp" />
+
+            <Button
+                android:id="@+id/login_button"
+                android:layout_width="230dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="20dp"
+                android:layout_toRightOf="@id/signup_button"
+                android:background="@drawable/pink_round_btn"
+                android:fontFamily="@font/sfprotext_semibold"
+                android:text="LOGIN"
+                android:textColor="#ffffff"
+                android:textSize="28dp"
+                android:translationZ="2dp" />
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="490dp"
+            android:layout_height="0.2dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginBottom="30dp"
+            android:background="?android:attr/listDivider" />
+
+
+        <Button
+            android:id="@+id/facebook_button"
+            android:layout_width="490dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/button_facebook"
+            android:fontFamily="@font/sfprotext_semibold"
+            android:text="Sign in with Facebook"
+            android:textAllCaps="false"
+            android:textColor="@color/design_default_color_primary_dark"
+            android:textSize="22dp" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/forgot_pw_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="15dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:fontFamily="@font/sfprotext_semibold"
+                android:text="Forgot Password?"
+                android:textAllCaps="false"
+                android:textColor="#7BCAE8"
+                android:textSize="22dp" />
+        </RelativeLayout>
     </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="50dp"
-        >
-    <Button
-        android:id="@+id/signup_button"
-        android:layout_width="230dp"
-        android:layout_height="60dp"
-        android:text="SIGN UP"
-        android:fontFamily="@font/sfprotext_semibold"
-        android:textSize="28dp"
-        android:textColor="@color/pinkPrimary"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/outline_pink_round_btn"
-        android:layout_marginRight="33dp"
-        android:translationZ="2dp"/>
-
-    <Button
-        android:id="@+id/login_button"
-        android:layout_width="230dp"
-        android:layout_toRightOf="@id/signup_button"
-        android:layout_height="60dp"
-        android:text="LOGIN"
-        android:fontFamily="@font/sfprotext_semibold"
-        android:textSize="28dp"
-        android:textColor="#ffffff"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/pink_round_btn"
-        android:translationZ="2dp"/>
-
-    </RelativeLayout>
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="490dp"
-        android:layout_height="0.2dp"
-        android:background="?android:attr/listDivider"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="30dp"/>
-
-
-    <Button
-        android:id="@+id/facebook_button"
-        android:layout_width="490dp"
-        android:layout_height="60dp"
-        android:text="Sign in with Facebook"
-        android:layout_gravity="center_horizontal"
-        android:textAllCaps="false"
-        android:fontFamily="@font/sfprotext_semibold"
-        android:textSize="22dp"
-        android:textColor="@color/design_default_color_primary_dark"
-        android:background="@drawable/button_facebook"
-        />
-
-<RelativeLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <Button
-        android:id="@+id/forgot_pw_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forgot Password?"
-        android:layout_alignParentTop="true"
-        android:textAllCaps="false"
-        android:fontFamily="@font/sfprotext_semibold"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="15dp"
-        android:textSize="22dp"
-        android:textColor="#7BCAE8"
-        android:background="?android:attr/selectableItemBackground"/>
-</RelativeLayout>
-</LinearLayout>
 
     <ImageView
         android:id="@+id/chefpic"
