--- a/app/src/main/res/layout/order_row_relative.xml
+++ b/app/src/main/res/layout/order_row_relative.xml
@@ -28,14 +28,14 @@
         android:id="@+id/idNumber"
         android:layout_width="30dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/orderId"
         android:layout_alignParentStart="true"
         android:layout_marginStart="22dp"
-        android:layout_below="@id/orderId"
 
 
         android:fontFamily="@font/sfprotext_bold"
         android:gravity="center"
-        android:text="1"
+        android:text="x"
         android:textColor="#333333"
         android:textSize="22sp" />
 
